# XReporter

./: .gitignore  AGENTS.md  AGENTS_cn.md  README.md  README_cn.md  environment.yml  pyproject.toml
.xreporter-local/: config.toml  xreporter.db
.xreporter-local/tws_existing_pool_check/: accounts.db  x.db
.xreporter-local/tws_existing_pool_collect_check/: fixture.json  xreporter.db
.xreporter-local/tws_manual/: fixture.json  xreporter.db
doc/: progress.md  progress_cn.md  tech_route.md  tech_route_cn.md
example/: run_1_en.html  run_1_zh.html
src/xreporter/: __init__.py  __main__.py  cli.py  config.py  i18n.py  logging_utils.py  models.py  normalizer.py  render.py  service.py  storage.py  time_range.py  x_api.py
tests/: test_cli_provider_selection.py  test_config.py  test_e2e_cli.py  test_i18n.py  test_logging_utils.py  test_multi_provider_clients.py  test_normalizer.py  test_render.py  test_service.py  test_storage.py  test_time_range.py  test_x_api_client.py
