[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "xreporter"
version = "0.1.0"
description = "Collect and render followings' activity from X.com"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "XReporter Team" }
]
dependencies = [
  "typer>=0.12.5",
  "rich>=13.9.4",
  "httpx>=0.27.2",
  "twscrape>=0.15.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=5.0.0"
]

[project.scripts]
xreporter = "xreporter.cli:app"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/xreporter"]
